<resources>
    <string name="app_name" translatable="false">My Mood Diary</string>
    <string name="title_home">Home</string>
    <string name="title_log" translatable="false">DASS</string>
    <string name="title_voice">Voice</string>
    <string name="title_dashboard">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="connect_to_shealth">Connect with Samsung-Health</string>
    <string name="notice">Notice</string>
    <string name="msg_perm_acquired">All permissions are required</string>
    <string name="msg_conn_not_available">Connection with Samsung Health not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please update Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please accept Samsung Health agreement</string>
    <string name="msg_req_available">Samsung Health must have all permissions</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="home_title">Study Objectives</string>
    <string name="home_description">The project aims to detect changes in mood and stress levels, by analyzing data obtained from the smartwatch sensors and the spoken diary recordings.</string>
    <string name="device_id">Autogenerated</string>
    <string name="user_age">Age</string>
    <string name="user_watch">Watch ID</string>
    <string name="user_gender_male">Male</string>
    <string name="user_gender_female">Female</string>
    <string name="user_gender_other">Other</string>
    <string name="user_weight">Weight</string>
    <string name="user_height">Height</string>
    <string name="user_terms">I agree to provide my data for the purposes of this study.</string>
    <string name="log_send">Send Log</string>
    <string name="advice_title">Our advice</string>
    <string name="advice_1">Walk briskly for 15 to 30 minutes each day, or dance, run or ride a bike, if you prefer. Depressed people don\'t usually feel like being active, but make yourself do it anyway (ask a friend to join you to stay motivated). Once you make exercise a habit, it won\'t take long to notice a positive change in your mood. Aside from aerobic exercise, some yoga poses can help relieve depressed feelings.</string>
    <string name="advice_2">Depression can affect appetite. When depressed, some people don\'t feel like eating at all, but others may eat too much. If depression has affected your eating habits, you will need to be very aware of the need to eat well. Nutrition can influence a person\'s mood and energy level.</string>
    <string name="advice_3">Try to identify the circumstances that have contributed to your depression. Once you know what has made you feel sad and down and why, and have aired those thoughts and feelings, focus attention on something positive. Take action to solve your problems.</string>
    <string name="advice_4">When a person is depressed, they may have blocked creativity and the ability to enjoy things. Exercise your imagination (painting, drawing, doodling, sewing, writing, dancing, composing music, etc.) and you will not only get your creative juices flowing but you may also experience positive emotions. Spend time playing with a friend or your pet or do something fun alone.</string>
    <string name="advice_5">Depression has an impact on people\'s thoughts, making everything seem black, disastrous, sad and negative. If depression is making you focus only on the negative, make an effort to focus on the good things in life. As an exercise you can make a list of positive things that happened to you in your day; this will help you realize that you can find positive sides to even the smallest of things.</string>
    <string name="advice_6">Avoidance is a defense mechanism that, in the short term, \"protects\" you from experiencing difficult emotions but, in the long term, can generate a greater degree of depression.</string>
    <string name="advice_7">A typical characteristic of depression is losing interest in achieving goals or objectives. Setting goals, whether big or small, is an important means to overcome depression.</string>
    <string name="advice_8">Have hobbies and practice them as much as you can. It will make you feel alive. Whatever happens, don’t forget to reserve moments for yourself and to do what you enjoy. Don\'t let your mood determine your activity level.</string>
    <string name="advice_9">Don\'t close in on yourself, it is important that you remove your armor and let someone know how you feel. Remember that life is too short to suffer longer than necessary.</string>
    <string name="advice_10">Start moving TODAY! Take the first step NOW and step by step you will overcome depression and regain your vitality.</string>
    <string name="notification">No notification</string>
    <string name="audioDesc">To start recording press the button</string>
    <string name="preview">Preview</string>
    <string name="playing">Playing</string>
    <string name="notPlaying">Waiting</string>
    <string name="ended">Ended</string>
    <string name="stopped">Stopped</string>
    <string name="sendAudio">Send audio</string>
    <string name="removeAudio">Remove audio</string>
    <string name="audioFreeText">In this section, tell us about your day</string>
    <string name="recordingInstructions">Please go through both</string>
    <string name="customBtnText">1. Open Question</string>
    <string name="textBtnText">2. Text Recording</string>
    <string name="user_name" translatable="false">Alias</string>
    <string name="log_first">I found it hard to wind down.</string>
    <string name="log_second">I was aware of dryness of my mouth.</string>
    <string name="log_fourth">I experienced breathing difficulty (e.g. excessively rapid breathing, breathlessness in the absence of physical exertion).</string>
    <string name="log_fifth">I found it difficult to work up the initiative to do things.</string>
    <string name="log_sixth">I tended to over-react to situations.</string>
    <string name="log_seventh">I experienced trembling (e.g. in the hands).</string>
    <string name="ok" translatable="false">OK</string>
    <string-array name="dropdown_array">
        <item>- </item>
        <item>0 Did not apply to me at all</item>
        <item>1 Applied to me to some degree, or some of the time</item>
        <item>2 Applied to me to a considerable degree or a good part of time</item>
        <item>3 Applied to me very much or most of the time</item>
    </string-array>
    <string-array name="dropdown_gender">
        <item>- </item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string-array name="dropdown_language">
        <item>- </item>
        <item>A1 Beginner</item>
        <item>A2 Elementary</item>
        <item>B1 Intermediate</item>
        <item>B2 Upper Intermediate</item>
        <item>C1 Advanced</item>
        <item>C2 Proficient</item>
    </string-array>
    <string name="log_third">I couldn’t seem to experience any positive feeling at all.</string>
    <string name="log_eight">I felt that I was using a lot of nervous energy.</string>
    <string name="log_ninth">I was worried about situations in which I might panic and make a fool of myself.</string>
    <string name="log_tenth">I felt that I had nothing to look forward to.</string>
    <string name="log_eleventh">I found myself getting agitated.</string>
    <string name="log_twelfth">I found it difficult to relax.</string>
    <string name="log_thirteenth">I felt down-hearted and blue.</string>
    <string name="log_fourteenth">I was intolerant of anything that kept me from getting on with what I was doing.</string>
    <string name="log_fifteenth">I felt I was close to panic.</string>
    <string name="log_sixteenth">I was unable to become enthusiastic about anything.</string>
    <string name="log_seventeenth">I felt I wasn’t worth much as a person.</string>
    <string name="log_eighteenth">I felt that I was rather touchy.</string>
    <string name="log_nineteenth">I was aware of the action of my heart in the absence of physical exertion (e.g. sense of heart rate increase, heart missing a beat).</string>
    <string name="log_twentieth">I felt scared without any good reason.</string>
    <string name="log_twentyfirst">I felt that life was meaningless.</string>
    <string name="log_instructions">Please read each statement and circle a number, 0, 1, 2 or 3, to indicate how much the statement applied to you over the past week. There are no right or wrong answers. Do not spend too much time on any statement.</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="prompt_gender">Gender</string>
    <string name="action_register">Register</string>
    <string name="action_logout" translatable="false">Logout</string>
    <string name="register_here">Register here</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="email_error">Email is necessary!</string>
    <string name="password_error">Password is necessary!</string>
    <string name="password_error_2">Password must be more than 6 characters</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="email_prompt_reset">Please enter your alias to reset your password</string>
    <string name="yes">Yes</string>
    <string name="reset_link_prompt">Reset link sent to your email.</string>
    <string name="reset_link_prompt_error">Reset link was NOT sent</string>
    <string name="error">Error</string>
    <string name="alias_error">Alias is necessary!</string>
    <string name="gender_error">Gender is necessary!</string>
    <string name="user_created">User Created!</string>
    <string name="language_prof" translatable="false">English Language Proficiency</string>
    <string name="title_wearables">Upload</string>
    <string name="question_1">What kind of things do you enjoy?</string>
    <string name="question_2">Some people prefer to spend time with other people, while others prefer to work and do things alone. How would you describe yourself?</string>
    <string name="question_3">Do you usually avoid taking chances or trying new activities because you’re worried about embarrassing yourself? Why?</string>
    <string name="question_4">Do you often turn to others for advice about everyday decisions like what to have for lunch or what clothes to buy?</string>
    <string name="question_5">Some people turn to others to make decisions about important areas of their life. For example, they let someone else decide whether they should take a job, who their friends should be, etc. Does this sound like your life?</string>
    <string name="question_6">Do you usually need help from somebody else to get started on a project or do things on your own? Why is that?</string>
    <string name="question_7">After you pay your bills, what kinds of things do you like to spend money on? Are you slow to spend money on yourself?</string>
    <string name="question_8">Some people worry so much about something terrible happening in the future, that they hold on to all their money. Does this sound like you? Tell me about that.</string>
    <string name="question_9">When you have a chance to do something that’s fun, is it hard to enjoy it? Have you always been this way?</string>
    <string name="question_10">Is it hard for you to admit that you’ve had a good time? Have you always been this way?</string>
    <string name="question_11">Do you usually turn down opportunities to have a good time? Why is this?</string>
    <string name="question_12">Would you call yourself a workaholic? Why or why not?</string>
</resources>