<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#12F3EFEF"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="25dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/advice_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/advice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/advice_1"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="25dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/home_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/home_description"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="25dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/resources_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="Please know that additional Mental wellness supports are available to you if you ever need them"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/resources_body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="Counseling and clinical services at the U of A"
                        android:textSize="18sp"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/resources_body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="Book an initial consultation by calling 780-492-5205 or visit the clinic in 2-600 SUB between the hours of 8:00am-4:00pm, Monday through Friday."
                        android:layout_marginBottom="8dp"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/resources_body3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="8dp"
                        android:text="U of A students who do not currently reside in Alberta can connect with doshelp@ualberta.ca for additional support."
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/resources_body4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="8dp"
                        android:text="Please note that counseling services  through this program are not meant for urgent or crisis situations"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/resources_body5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="ACCESS 24/7"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/resources_body6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="Connect with a mental health therapist or psychiatrist"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/resources_body7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="Available for urgent and crisis situations"
                        android:layout_marginBottom="8dp"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/resources_body8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="Phone 780-424-2424 or drop-in through Anderson Hall (at the Royal Alexandra Hospital)  at 10959 102 St NW, Edmonton, AB T5H 2V1"
                        android:layout_marginBottom="8dp"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/resources_body9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="24 Hour Distress/Crisis Line 780-482-4357"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/resources_body10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="If you are experiencing suicidal thoughts with a specific plan and/or do not feel you can keep yourself safe call 9-1-1 or go to the Emergency Department."
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>